[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cupshelpers"
version = "1.0"
description = "Helper functions and classes for using CUPS"
authors = [
  { name = "Tim Waugh", email = "twaugh@redhat.com" },
  { name = "Till Kamppeter", email = "till.kamppeter@gmail.com" },
  { name = "Jiri Popelka", email = "jpopelka@redhat.com" },
  { name = "Zdenek Dohnal", email = "zdohnal@redhat.com" },
]
license = { file = "COPYING" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/OpenPrinting/system-config-printer"
"Bug Tracker" = "https://github.com/OpenPrinting/system-config-printer/issues"
